Mock ADS drafts endpoints (#55)
* Mock ADS drafts endpoints

* Address review comments
